# SmartPacifier-Tool

./: .gitignore  .gitmodules  README.md
src/service_backend/: CMakeLists.txt  library.h  main.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h  vcpkg.json
src/service_backend/configuration/: config.json
src/service_backend/src/: main.cpp  mqtt_handler.cpp  mqtt_handler.h  nng_handler.h
src/service_backend/src/broker/: brokercheck_os.cpp  brokercheck_os.h  mosquitto_logic.cpp  mosquitto_logic.h  mqtt_subscriber.h
src/service_backend/src/communication_layer/broker/: brokercheck_os.cpp  mqtt_subscriber.cpp  mqtt_subscriber.h
src/service_backend/src/communication_layer/mqtt/: MyMQTTClient.cpp  MyMQTTClient.h  mqtt_handler.cpp  mqtt_handler.h
src/service_backend/src/ipc/: pathfile.txt
src/service_backend/src/ipc/nng/: NNGHandler.cpp  NNGHandler.h
src/service_backend/src/nng_ipc/: NNGHandler.h  nng_handler.cpp  nng_handler.h
src/sp_backend/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  VersionInfo.h  build.ninja  cmake_install.cmake  flattened_messages.txt
src/sp_backend/.cmake/api/v1/reply/: cache-v2-e34a0c5802304a85e800.json  cmakeFiles-v1-bd4a45a83b6c529f327c.json  codemodel-v2-e390fec4b8012adcbe4d.json  directory-src.external_libs.grpc-Debug-393e6c6a391c02d5d328.json  directory-src.external_libs.grpc.third_party.abseil-cpp-Debug-b59dfe64dc99abb4f14b.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl-Debug-4c3859079e1c515f1409.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.algorithm-Debug-bc90a40b368d74354985.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.base-Debug-65dd060f38b5f34135ac.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.cleanup-Debug-22738cb2c375c1f6214d.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.container-Debug-8de8b92bb549637f97d9.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.debugging-Debug-85efd7330b6c468d50e3.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.flags-Debug-780bbdc3bd17faf16205.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.functional-Debug-01d992f4b9b7a480343c.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.hash-Debug-0b8e3b2ad9aaebed7235.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.memory-Debug-977d4ec8d4ec2c30ad25.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.meta-Debug-f561977a58ce645be67f.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.numeric-Debug-515cc7f14d087f2afa2f.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.profiling-Debug-bb4ed10cf363b38956c9.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.random-Debug-77c0821a6e1c924ecdc4.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.status-Debug-eef4c5070de065d1a4c4.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.strings-Debug-27578234836b8299fb36.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.synchronization-Debug-7986c443551335819a09.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.time-Debug-ad979fa520118252f4e1.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.types-Debug-72329c520a5f70acf45e.json  directory-src.external_libs.grpc.third_party.abseil-cpp.absl.utility-Debug-392cc6b2123d059ac755.json  directory-src.external_libs.grpc.third_party.cares.cares-Debug-1adb5e49b82765fcd217.json  directory-src.external_libs.grpc.third_party.cares.cares.docs-Debug-04fd2917e5b471c239db.json  directory-src.external_libs.grpc.third_party.cares.cares.include-Debug-2c04c2f4a875192f168a.json  directory-src.external_libs.grpc.third_party.cares.cares.src-Debug-89588c025cc8e05ba23f.json  directory-src.external_libs.grpc.third_party.cares.cares.src.lib-Debug-570639f598e10c83595b.json  directory-src.external_libs.grpc.third_party.cares.cares.src.tools-Debug-3cc74810131d64768179.json  directory-src.external_libs.grpc.third_party.protobuf-Debug-fc1b153f51f3c0cce192.json  directory-src.external_libs.grpc.third_party.re2-Debug-55cbf6cc4c988ef8b1bd.json  directory-src.external_libs.grpc.third_party.zlib-Debug-fa51640dce4d1a73e18e.json  directory-src.external_libs.mqtt.paho.mqtt.cpp-Debug-1fea394ab5c80d437c91.json  directory-src.external_libs.mqtt.paho.mqtt.cpp.cmake-Debug-c0a6bb5c0b7b364060b6.json  directory-src.external_libs.mqtt.paho.mqtt.cpp.externals.paho-mqtt-c.src-Debug-75245400b08eda3c9cc7.json  directory-src.external_libs.mqtt.paho.mqtt.cpp.src-Debug-d9a4246aa4a74fd38ede.json  index-2025-03-21T10-27-52-0892.json  target-Base64Test-Debug-5dc11aa2646d78317bbe.json  (+160 more)
src/sp_backend/src/: main.cpp
src/sp_backend/src/communication_layer/: CommunicationLayer.cpp  CommunicationLayer.h  I_CommunicationLayer.cpp  I_CommunicationLayer.h
src/sp_backend/src/communication_layer/broker/: BrokerCheck.cpp  BrokerCheck.h  DataRetrieval.cpp  DataRetrieval.h  GlobalMessageQueue.h  Logger.cpp  Logger.h  MessageQueue.h
src/sp_backend/src/communication_layer/data_processing/: DeserializedData.cpp  DeserializedData.h  RawData.cpp  RawData.h
src/sp_backend/src/communication_layer/debug/: Logger.cpp  Logger.h
src/sp_backend/src/ipc/: sensor_data.proto
src/sp_backend/src/ipc_layer/grpc/: gprc_server.cpp  gprc_server.h  grpc_client.cpp  grpc_client.h  myservice.grpc.pb.cc  myservice.grpc.pb.h  myservice.pb.cc  myservice.pb.h  myservice.proto  sensor_data.grpc.pb.cc  sensor_data.grpc.pb.h  sensor_data.pb.cc  sensor_data.pb.h
src/sp_backend/src/platform_layer/: PlatformFactory.h  PlatformManager.h
src/sp_backend/src/platform_layer/andorid/: Platform.cmake
src/sp_backend/src/platform_layer/ios/: Platform.cmake
src/sp_backend/src/platform_layer/linux/: LinuxPlatformManager.cpp  LinuxPlatformManager.h  Platform.cmake
src/sp_backend/src/platform_layer/windows/: Platform.cmake  WindowsPlatformManager.cpp  WindowsPlatformManager.h
(+56 files in other folders)
